--- a/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
+++ b/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
@@ -2,7 +2,7 @@
   <!-- Thong tin san  -->
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">General Information</h1>
+      <h1 class="modal-title">Gridiron Information</h1>
     </div>
     <div class="modal-body">
       <form role="form" [formGroup]="formDetail" (ngSubmit)="edit()">
@@ -44,7 +44,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <div class="form-group">
               <label class="control-label">Choose picture</label>
               <div class="input-include-error">
@@ -52,7 +52,7 @@
                   placeholder="">
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-6">
             <div class="form-group">
               <label class="control-label">Phone</label>
