--- a/web/src/app/user/gridiron/gridiron.component.html
+++ b/web/src/app/user/gridiron/gridiron.component.html
@@ -1,7 +1,16 @@
 <div class="container">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Manage gridiron</h1>
+      <h1 class="modal-title">List Gridiron</h1>
+    </div>
+    <div class="modal-body">
+      <app-data-table [showSearch]=false [headers]="headers" [items]="listGridiron" [listSearch]=[0,1]
+        (outputAction)="handleAction($event)"></app-data-table>
+    </div>
+  </div>
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="modal-title">Create New Gridiron</h1>
     </div>
     <div class="modal-body">
       <form role="form" [formGroup]="formAdd" (ngSubmit)="add()">
@@ -13,7 +22,8 @@
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="name" formControlName="name">
                 <span
-                  *ngIf="formAdd.controls.name.hasError('required')&&(formAdd.controls['name'].touched || errorForm)">Field required</span>
+                  *ngIf="formAdd.controls.name.hasError('required')&&(formAdd.controls['name'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
@@ -26,7 +36,8 @@
                   [selectedIndex]="selectedIndex" [options]="listArea"
                   (selectedOption)="handleDownSelect($event, 'area')"></app-select-dropdown>
                 <span
-                  *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Field required</span>
+                  *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
@@ -37,11 +48,12 @@
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="link_face" formControlName="link_face">
                 <span
-                  *ngIf="formAdd.controls.link_face.hasError('required')&&(formAdd.controls['link_face'].touched || errorForm)">Field required</span>
+                  *ngIf="formAdd.controls.link_face.hasError('required')&&(formAdd.controls['link_face'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <div class="form-group">
               <label class="control-label">Choose picture</label>
               <div class="input-include-error">
@@ -49,7 +61,7 @@
                   placeholder="">
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-6">
             <div class="form-group">
               <label class="control-label">Phone</label>
@@ -57,7 +69,8 @@
               <div class="input-include-error">
                 <input type="number" class="form-control input-lg" name="phone" formControlName="phone">
                 <span
-                  *ngIf="formAdd.controls.phone.hasError('required')&&(formAdd.controls['phone'].touched || errorForm)">Field required</span>
+                  *ngIf="formAdd.controls.phone.hasError('required')&&(formAdd.controls['phone'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
@@ -68,7 +81,8 @@
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="address" formControlName="address">
                 <span
-                  *ngIf="formAdd.controls.address.hasError('required')&&(formAdd.controls['address'].touched || errorForm)">Field required</span>
+                  *ngIf="formAdd.controls.address.hasError('required')&&(formAdd.controls['address'].touched || errorForm)">Field
+                  required</span>
               </div>
             </div>
           </div>
@@ -95,11 +109,8 @@
         </div>
       </form>
     </div>
-    <div class="modal-body">
-      <app-data-table [showSearch]=false [headers]="headers" [items]="listGridiron" [listSearch]=[0,1]
-        (outputAction)="handleAction($event)"></app-data-table>
-    </div>
   </div>
 </div>
-<app-alert-confirm [id]="'confirm'" [message]="'Are you sure delete this Gridiron?'" (saveConfirm)="saveConfirm()" (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
+<app-alert-confirm [id]="'confirm'" [message]="'Are you sure delete this Gridiron?'" (saveConfirm)="saveConfirm()"
+  (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
 <app-loading></app-loading>
