--- a/web/src/app/user/home/home.component.scss
+++ b/web/src/app/user/home/home.component.scss
@@ -6,7 +6,7 @@
 /* Set gray background color and 100% height */
 .sidenav {
   background-color: #f1f1f1;
-  // height: 100%;
+  height: 100% !important;
 }
 
 /* Set black background color, white text and some padding */
