set default hide form create.

--- a/web/src/app/user/match/match-detail/match-detail.component.html
+++ b/web/src/app/user/match/match-detail/match-detail.component.html
@@ -127,7 +127,7 @@
 
           <div *ngIf="status == 'Waitting'" class="col-md-12">
             <div class="form-group"> 
-              <label class="control-label">Guest Team Info &nbsp;</label> <b><a href="team/view/{{dataObjectDetail && dataObjectDetail.team ? dataObjectDetail.team.id : ''}}">Link
+              <label class="control-label">Guest Team Info &nbsp;</label> <b><a target="_blank" href="team/view/{{dataObjectDetail && dataObjectDetail.team ? dataObjectDetail.team.id : ''}}">Link
                 Guest Team Info</a></b>
             </div>
           </div>
