--- a/web/src/app/user/gridiron/gridiron.component.html
+++ b/web/src/app/user/gridiron/gridiron.component.html
@@ -1,14 +1,5 @@
 <div class="container">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h1 class="modal-title">List Gridiron</h1>
-    </div>
-    <div class="modal-body">
-      <app-data-table [showSearch]=false [headers]="headers" [items]="listGridiron" [listSearch]=[0,1]
-        (outputAction)="handleAction($event)"></app-data-table>
-    </div>
-  </div>
-  <div class="modal-content">
+  <div *ngIf="!isShow" class="modal-content">
     <div class="modal-header">
       <h1 class="modal-title">Create New Gridiron</h1>
     </div>
@@ -101,6 +92,13 @@
               </button>
             </div>
           </div>
+          <div class="col-md-2 btn-center">
+            <div class="form-group">
+              <button type="submit" class="btn btn-secondary" (click)="actionForm('hide')">
+                <i class="far fa-times-circle"></i> &nbsp;Cancel
+              </button>
+            </div>
+          </div>
           <div class="col-md-8">
             <div class="input-include-error btn-center">
               <span *ngIf="addFaild">{{messageError}}</span>
@@ -108,6 +106,21 @@
           </div>
         </div>
       </form>
+    </div>
+  </div>
+
+  <div class="modal-content">
+    <div class="modal-header  row dis-flex">
+      <div class="col-sm-8">
+        <h1 class="modal-title">List Gridiron</h1>
+      </div>
+      <div *ngIf="isShow" class="col-sm-4 div-center"><button (click)="actionForm('show')"
+          class="btn-center btn btn-success dis-flex"><i class="fas fa-plus-circle"></i>&nbsp; Create New Gridiron</button>
+      </div>
+    </div>
+    <div class="modal-body">
+      <app-data-table [showSearch]=false [headers]="headers" [items]="listGridiron" [listSearch]=[0,1]
+        (outputAction)="handleAction($event)"></app-data-table>
     </div>
   </div>
 </div>
