--- a/web/src/app/user/match/match.component.html
+++ b/web/src/app/user/match/match.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="modal-content">
+  <div *ngIf="!isShow" class="modal-content">
     <div class="modal-header">
       <h1 class="modal-title">Create New Match</h1>
     </div>
@@ -11,7 +11,8 @@
               <label class="control-label">Date</label>
               <span class="required"> *</span>
               <div class="input-include-error">
-                <input type="date" min="{{startDate}}" class="form-control input-lg" name="" formControlName="date_of_match">
+                <input type="date" min="{{startDate}}" class="form-control input-lg" name=""
+                  formControlName="date_of_match">
                 <span
                   *ngIf="formAdd.controls.date_of_match.hasError('required')&&(formAdd.controls['date_of_match'].touched || errorForm)">Field
                   required</span>
@@ -121,6 +122,13 @@
               </button>
             </div>
           </div>
+          <div class="col-md-2 btn-center">
+            <div class="form-group">
+              <button type="submit" class="btn btn-secondary" (click)="actionForm('hide')">
+                <i class="far fa-times-circle"></i> &nbsp;Cancel
+              </button>
+            </div>
+          </div>
           <div class="col-md-8">
             <div class="input-include-error btn-center">
               <span *ngIf="addFaild">{{messageError}}</span>
@@ -132,8 +140,13 @@
   </div>
 
   <div class="modal-content">
-    <div class="modal-header">
-      <h1 class="modal-title">History Matches</h1>
+    <div class="modal-header row dis-flex">
+      <div class="col-sm-8">
+        <h1 class="modal-title">History Matches</h1>
+      </div>
+      <div *ngIf="isShow" class="col-sm-4 div-center"><button (click)="actionForm('show')"
+          class="btn-center btn btn-success dis-flex"><i class="fas fa-plus-circle"></i>&nbsp; Create New Match</button>
+      </div>
     </div>
     <div class="modal-body">
       <app-data-table [showSearch]=false [headers]="headers" [items]="listMatch" [listSearch]=[0,1,2,3,4]
