--- a/web/src/app/user/league/manage-league/league-detail/league-detail.component.html
+++ b/web/src/app/user/league/manage-league/league-detail/league-detail.component.html
@@ -1,144 +1,241 @@
-<div class="container">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h1 class="modal-title">Create New Match</h1>
-    </div>
-    <div class="modal-body">
-      <form role="form" [formGroup]="formAdd" (ngSubmit)="add()">
-        <div class="col-md-12 row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Date</label>
-              <span class="required"> *</span>
-              <div class="input-include-error">
-                <input type="date" min="{{startDate}}" class="form-control input-lg" name="" formControlName="date_of_match">
-                <span
-                  *ngIf="formAdd.controls.date_of_match.hasError('required')&&(formAdd.controls['date_of_match'].touched || errorForm)">Field
-                  required</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Time</label>
-              <span class="required"> *</span>
-              <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['time'].value" [title]="'Select Time'"
-                  [selectedIndex]="selectedIndex" [options]="listTime"
-                  (selectedOption)="handleDownSelect($event, 'time')"></app-select-dropdown>
-                <span
-                  *ngIf="formAdd.controls.time.hasError('required')&&(formAdd.controls['time'].touched || errorForm)">Field
-                  required</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Team</label>
-              <span class="required"> *</span>
-              <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['team'].value" [title]="'Select Team'"
-                  [selectedIndex]="selectedIndex" [options]="listTeam"
-                  (selectedOption)="handleDownSelect($event, 'team')"></app-select-dropdown>
-                <span
-                  *ngIf="formAdd.controls.team.hasError('required')&&(formAdd.controls['team'].touched || errorForm)">Field
-                  required</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Level</label>
-              <span class="required"> *</span>
-              <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['level'].value" [title]="'Level'"
-                  [selectedIndex]="selectedIndex" [options]="listLevel"
-                  (selectedOption)="handleDownSelect($event, 'level')"></app-select-dropdown>
-                <span
-                  *ngIf="formAdd.controls.level.hasError('required')&&(formAdd.controls['level'].touched || errorForm)">Field
-                  required</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Career</label>
-              <span class="required"> *</span>
-              <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['career'].value" [title]="'Career'"
-                  [selectedIndex]="selectedIndex" [options]="listCareer"
-                  (selectedOption)="handleDownSelect($event, 'career')"></app-select-dropdown>
-                <span
-                  *ngIf="formAdd.controls.career.hasError('required')&&(formAdd.controls['career'].touched || errorForm)">Field
-                  required</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Gridiron</label>
-              <div class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['gridiron'].value" [title]="'Select gridiron'"
-                  [selectedIndex]="selectedIndex" [options]="listGridiron"
-                  (selectedOption)="handleDownSelect($event, 'gridiron')"></app-select-dropdown>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <label class="control-label">Area</label>
-              <span class="required"> *</span>
-              <div [ngClass]="{'view': formAdd.controls['gridiron'].value}" class="input-include-error">
-                <app-select-dropdown [nameSelect]="formAdd.controls['area'].value" [title]="'Area'"
-                  [selectedIndex]="selectedIndex" [options]="listArea"
-                  (selectedOption)="handleDownSelect($event, 'area')"></app-select-dropdown>
-                <span
-                  *ngIf="formAdd.controls.area.hasError('required')&&(formAdd.controls['area'].touched || errorForm)">Field
-                  required</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-12">
-            <div class="form-group">
-              <label class="control-label">Invitation Summary</label>
-              <div class="input-include-error">
-                <textarea type="textarea" class="form-control input-lg" formControlName="invitation"></textarea>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-2 btn-center">
-            <div class="form-group">
-              <button type="submit" class="btn btn-success" [disabled]="!formAdd.valid">
-                <i class="fas fa-plus-circle"></i> &nbsp;Create
-              </button>
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="input-include-error btn-center">
-              <span *ngIf="addFaild">{{messageError}}</span>
-            </div>
+<div class="container-fluid mg-header">
+  <div class="row content">
+    <div class="col-sm-3 sidenav ">
+      <div class="header-sidenav">
+        <div class="row">
+          <div class="col-sm-12">
+            <h5 style="text-transform: uppercase; text-align: center "><i class="far fa-futbol"></i>&nbsp; INFORMATION
+              OF LEAGUE <<{{dataObjectDetail ? dataObjectDetail.name_of_league : ''}}>></h5>
           </div>
         </div>
-      </form>
+        <hr>
+        <div class="row">
+          <div class="col-md-12 mb-3">
+            <button [ngClass]="{'active-round': show1}" class="btn btn-secondary" (click)="show('1')">General
+              Information</button>
+          </div>
+          <div class="col-md-12 mb-3">
+            <button [ngClass]="{'active-round': show2}" class="btn btn-secondary" (click)="show('2')">League
+              Standings</button>
+          </div>
+          <div class="col-md-12 mb-3">
+            <button [ngClass]="{'active-round': show3}" class="btn btn-secondary" (click)="show('3')">Rounds</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="modal-content">
-    <div class="modal-header">
-      <h1 class="modal-title">History Matches</h1>
+    <div *ngIf="!show3" class="col-sm-9">
+      <div *ngIf="show1" class="col-sm-12 main-content">
+        <div class="header-sidenav">
+          <div class="container">
+            <h4>GENERAL INFORMATION</h4>
+          </div>
+        </div>
+        <div class="content-match">
+          <form role="form" [formGroup]="formEdit">
+            <div class="col-md-12 row">
+              <div class="col-md-5 text-center">
+                <img src="../../../../assets/images/backGround.jpg" class="img-thumbnail" height="75%" width="90%"
+                  alt="Avatar">
+              </div>
+              <div class="col-md-7">
+                <div class="row">
+
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label class="control-label">Name of league</label>
+                      <span class="required"> *</span>
+                      <div class="input-include-error">
+                        <input type="text" class="form-control input-lg" formControlName="name_of_league">
+                        <span
+                          *ngIf="formEdit.controls.name_of_league.hasError('required')&&(formEdit.controls['name_of_league'].touched || errorForm)">Field
+                          required</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-5">
+                    <div class="form-group">
+                      <label class="control-label">Number of teams</label>
+                      <span class="required"> *</span>
+                      <div class="input-include-error">
+                        <input disabled type="number" class="form-control input-lg" formControlName="number_of_teams">
+                        <span
+                          *ngIf="formEdit.controls.number_of_teams.hasError('required')&&(formEdit.controls['number_of_teams'].touched || errorForm)">Field
+                          required</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-7">
+                    <div class="form-group">
+                      <label class="control-label">Status</label>
+                      <span class="required"> *</span>
+                      <div class="input-include-error">
+                        <input disabled type="text" class="form-control input-lg" formControlName="status">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label class="control-label">Registry Expiry Date</label>
+                      <span class="required"> *</span>
+                      <div class="input-include-error">
+                        <input type="date" min="{{startDate}}" class="form-control input-lg" name=""
+                          formControlName="date_expiry_register">
+                        <span
+                          *ngIf="formEdit.controls.date_expiry_register.hasError('required')&&(formEdit.controls['date_expiry_register'].touched || errorForm)">Field
+                          required</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div [ngClass]="'view'" class="col-md-4">
+                <div class="form-group">
+                  <label class="control-label">Type of competition</label>
+                  <span class="required"> *</span>
+                  <div class="input-include-error">
+                    <app-select-dropdown [nameSelect]="formEdit.controls['type_league'].value" [title]="'Select Type'"
+                      [selectedIndex]="selectedIndex" [options]="listTypeOfLeague"
+                      (selectedOption)="handleDownSelect($event, 'type')"></app-select-dropdown>
+                    <span
+                      *ngIf="formEdit.controls.type_league.hasError('required')&&(formEdit.controls['type_league'].touched || errorForm)">Field
+                      required</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label class="control-label">Area of league</label>
+                  <span class="required"> *</span>
+                  <div class="input-include-error">
+                    <app-select-dropdown [nameSelect]="formEdit.controls['area'].value" [title]="'Select Area'"
+                      [selectedIndex]="selectedIndex" [options]="listArea"
+                      (selectedOption)="handleDownSelect($event, 'area')"></app-select-dropdown>
+                    <span
+                      *ngIf="formEdit.controls.area.hasError('required')&&(formEdit.controls['area'].touched || errorForm)">Field
+                      required</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label class="control-label">Career (if any)</label>
+                  <div class="input-include-error">
+                    <app-select-dropdown [nameSelect]="formEdit.controls['career'].value" [title]="'Select Career'"
+                      [selectedIndex]="selectedIndex" [options]="listCareer"
+                      (selectedOption)="handleDownSelect($event, 'career')"></app-select-dropdown>
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label class="control-label">Summary about league</label>
+                  <div class="input-include-error">
+                    <textarea type="textarea" class="form-control input-lg" formControlName="description"></textarea>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 btn-center">
+                <div class="form-group">
+                  <button type="submit" class="btn btn-success" [disabled]="!formEdit.valid" (click)="edit()">
+                    <i class="fas fa-plus-circle"></i> &nbsp;Update
+                  </button>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="input-include-error btn-center">
+                  <span *ngIf="addFaild">{{messageError}}</span>
+                </div>
+              </div>
+            </div>
+          </form>
+          <hr>
+        </div>
+      </div>
+
+      <div *ngIf="show2" class="col-sm-12 main-content">
+        <div class="header-sidenav">
+          <div class="container">
+            <h4>LEAGUE STANDINGS</h4>
+          </div>
+        </div>
+        <div class="content-match">
+          <div class="col-md-12 ">
+            <app-data-table [showSearch]=false [headers]="headers" [items]="listTeamStandings"
+              [listSearch]=[0,1,2,3,4,5,6,7]>
+            </app-data-table>
+          </div>
+          <hr>
+        </div>
+      </div>
     </div>
-    <div class="modal-body">
-      <app-data-table [showSearch]=false [headers]="headers" [items]="listMatch" [listSearch]=[0,1,2,3,4]
-        (outputAction)="handleAction($event)"></app-data-table>
+
+    <div *ngIf="show3" class="col-sm-6">
+      <div class="col-sm-12 main-content">
+        <div class="header-sidenav">
+          <div class="container">
+            <h4 class="text-h4"> <i class="fas fa-star"></i>ROUND {{currentRound}}</h4>
+          </div>
+        </div>
+        <div class="content-match">
+          <div class="col-md-12">
+            <div *ngFor="let item of listMatchByRound, index as i" class="row round">
+              <div *ngIf="!item.team_relax" class="col-md-4">
+                <span style="text-transform: uppercase;">{{item.team1.name}}</span>
+              </div>
+              <div *ngIf="!item.team_relax" class="col-md-2">
+                <span style="font-weight: bold">{{item.team1.score || 0}} - {{item.team2.score || 0}}</span>
+              </div>
+              <div *ngIf="!item.team_relax" class="col-md-4">
+                <span style="text-transform: uppercase;">{{item.team2.name}}</span>
+              </div>
+              <div *ngIf="!item.team_relax" class="col-md-2 btn-center">
+                <button style="border-radius: 1rem;" class="btn btn-success" (click)="updateMatch(i)">Update</button>
+              </div>
+              <div *ngIf="item.team_relax" class="col-md-12">
+                <span style="text-transform: uppercase;">{{item.team_relax}}: TIME RELAX</span>
+              </div>
+            </div>
+          </div>
+          <hr>
+        </div>
+      </div>
     </div>
+
+    <div *ngIf="show3" class="col-sm-3 sidenav ">
+      <div class="header-sidenav">
+        <div class="row">
+          <div class="col-sm-12">
+            <h5><i class="far fa-futbol"></i>&nbsp; LIST OF ROUNDS</h5>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div *ngFor="let item of listRound, index as i" class="col-md-12 mb-3">
+            <button [ngClass]="{'active-round': (currentPage * 10 + i + 1) == currentRound}" class="btn btn-secondary"
+              (click)="showRound(i,item)">Round {{currentPage * 10 + i + 1}}</button>
+          </div>
+        </div>
+
+        <ul class="pagination">
+          <li *ngFor="let item of pages, index as i" [ngClass]="{'active': currentPage == i}" class="page-item"><a
+              class="page-link" (click)="paging(i)">{{i+1}}</a></li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 </div>
-<app-loading></app-loading>
+<app-alert-confirm [id]="'confirm'" [message]="messageConfirm" (saveConfirm)="saveConfirm()"
+  (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
+<app-modal-update-match [id]="'update-match'" [match]="objectMatch" (outputData)="emitDataMatch($event)"></app-modal-update-match>
