--- a/web/src/app/user/league/manage-league/league-detail/modal-update-match/modal-update-match.component.scss
+++ b/web/src/app/user/league/manage-league/league-detail/modal-update-match/modal-update-match.component.scss
@@ -6,3 +6,15 @@
 .control-label {
   margin: 0;
 }
+
+.dis-flex {
+  display: flex;
+  align-items: center;
+}
+.div-center {
+  display: flex;
+  justify-content: flex-end;
+}
+.modal-header {
+  margin: 0 !important;
+}
