--- a/web/src/app/user/team/team.component.html
+++ b/web/src/app/user/team/team.component.html
@@ -127,7 +127,7 @@
   </div>
 
   <div class="modal-content">
-    <div class="modal-header row dis-flex">
+    <div class="modal-header row dis-flex" style="margin: 0">
       <div class="col-sm-8">
         <h1 class="modal-title">List Team</h1>
       </div>
