--- a/web/src/app/user/home/home.component.html
+++ b/web/src/app/user/home/home.component.html
@@ -114,7 +114,7 @@
     </div>
   </div>
 </div>
-<app-alert-confirm [id]="'confirm'" [message]="messageConfirm" (saveConfirm)="saveConfirm()"
+<app-alert-confirm [isAlert]=true [id]="'confirm'" [message]="messageConfirm" (saveConfirm)="saveConfirm()"
   (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
 <app-modal-pair-match [listTeam]="listTeam" [id]="'modalPairForm'" (outputE)="outputEmit($event)">
 </app-modal-pair-match>
