--- a/web/src/app/user/league/league.component.html
+++ b/web/src/app/user/league/league.component.html
@@ -42,11 +42,11 @@
           <div class="container">
             <form role="form" [formGroup]="searchForm">
               <div class="row input-group">
-                <div class="col-sm-8">
+                <div class="col-sm-9">
                   <input type="text" class="form-control" formControlName="textSearch"
-                    placeholder="Search team, team leader, gridiron">
+                    placeholder="Search anything..">
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                   <button style="width: 100%" (click)="search()" class="btn btn-success"><i
                       class="fas fa-search"></i>&nbsp;
                     Search..</button>
@@ -56,48 +56,59 @@
           </div>
         </div>
 
-        <div class="content-match" *ngFor="let item of listMatchSearch">
+        <div class="content-match" *ngFor="let item of listLeagueSearch">
           <div class="row">
-            <div class="col-sm-4 text-center">
-              <img src="../../../assets/images/league.png" class="img-thumbnail" height="80%" width="90%"
-                alt="Avatar">
+            <div class="col-sm-5 text-center">
+              <a (click)="navigate(item.id)">
+                <img  src="../../../assets/images/league.png" class="img-thumbnail" height="80%" width="90%" alt="Avatar">
+              </a> 
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-7">
               <div class="row">
                 <div class="col-sm-8">
-                  <h4><i class="fas fa-users"></i>.&nbsp; {{item.team.name}}</h4>
-                  <p><i class="fas fa-clock"></i>.&nbsp; {{item.date_of_match}} - <span class="title">Status: </span>
-                    <span style="color: red">{{item.status}}</span></p>
-                  <p><i class="fas fa-user"></i>.&nbsp; <span class="title">Team leader:</span> {{item.user.fullname}}
+                  <h4><i class="fab fa-shirtsinbulk"></i>.&nbsp;<a (click)="navigate(item.id)"> {{item.name_of_league}}</a></h4>
+                  <p *ngIf="item.status != 'Completed'"><i class="fas fa-clock"></i>.&nbsp; Time Register:
+                    {{item.date_expiry_register}}</p>
+                  <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; Status: <span style="color: red" class="title">
+                      {{item.status}}</span>
                   </p>
                 </div>
                 <div *ngIf="item.status == 'New'" class="col-sm-4">
-                  <button class="btn btn-success" (click)="pairMatch(item)"><i class="fas fa-hands-helping"></i>
-                    Pair</button>
+                  <button class="btn btn-success" (click)="register(item)"><i class="fas fa-file-signature"></i>
+                    Register</button>
                 </div>
               </div>
               <hr>
-              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title"> Gridiron:</span>
-                {{item.gridiron.name }} </p>
-              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Address:</span>
-                {{item.gridiron.address }} </p>
-              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Level Expected:</span>
-                {{item.level.name }}</p>
-              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Area:</span> {{item.area.name }} </p>
-              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Career:</span> {{item.career.name }}
+              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title"> Area of league:</span>
+                {{item.area.name }} </p>
+              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Career of league:</span>
+                {{item.career.name }} </p>
+              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Type of competition:</span>
+                {{item.type_league.name }}
               </p>
-              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Introduce:</span> {{item.invitation }}
+              <p><i class="fab fa-shirtsinbulk"></i>.&nbsp; <span class="title">Introduce summary of league:</span>
+                {{item.description }}
               </p>
               <br>
             </div>
           </div>
           <hr>
         </div>
+
+        <div *ngIf="listLeagueSearch && listLeagueSearch.length == 0" class="content-match">
+          <div class="row">
+            <div class="col-sm-12 text-center">
+              <h3 style="font-weight: bold; font-style: italic">No Data Available</h3>
+            </div>
+          </div>
+          <hr>
+        </div>
+
       </div>
     </div>
   </div>
 </div>
 <app-alert-confirm [id]="'confirm'" [message]="messageConfirm" (saveConfirm)="saveConfirm()"
-  (cancelConfirm)="cancelConfirm()"></app-alert-confirm>
-<app-modal-pair-match [listTeam]="listTeam" [id]="'modalPairForm'" (outputE)="outputEmit($event)">
+  (cancelConfirm)="cancelConfirm()" [isAlert]=true></app-alert-confirm>
+<app-modal-pair-match [listTeam]="listTeam" [title]="'Select team to register'" [isRegister]=true [id]="'modalPairForm'" (outputE)="outputEmit($event)">
 </app-modal-pair-match>
