--- a/web/src/app/user/gridiron/gridiron.component.html
+++ b/web/src/app/user/gridiron/gridiron.component.html
@@ -110,12 +110,13 @@
   </div>
 
   <div class="modal-content">
-    <div class="modal-header  row dis-flex">
+    <div class="modal-header  row dis-flex" style="margin: 0">
       <div class="col-sm-8">
         <h1 class="modal-title">List Gridiron</h1>
       </div>
       <div *ngIf="isShow" class="col-sm-4 div-center"><button (click)="actionForm('show')"
-          class="btn-center btn btn-success dis-flex"><i class="fas fa-plus-circle"></i>&nbsp; Create New Gridiron</button>
+          class="btn-center btn btn-success dis-flex"><i class="fas fa-plus-circle"></i>&nbsp; Create New
+          Gridiron</button>
       </div>
     </div>
     <div class="modal-body">
