--- a/web/src/app/user/league/manage-league/manage-league.component.html
+++ b/web/src/app/user/league/manage-league/manage-league.component.html
@@ -131,7 +131,7 @@
   </div>
 
   <div class="modal-content">
-    <div class="modal-header row dis-flex">
+    <div class="modal-header row dis-flex" style="margin: 0">
       <div class="col-sm-8">
         <h1 class="modal-title">List of your league</h1>
       </div>
