--- a/web/src/app/user/match/match.component.html
+++ b/web/src/app/user/match/match.component.html
@@ -140,7 +140,7 @@
   </div>
 
   <div class="modal-content">
-    <div class="modal-header row dis-flex">
+    <div class="modal-header row dis-flex" style="margin: 0">
       <div class="col-sm-8">
         <h1 class="modal-title">History Matches</h1>
       </div>
